# create-an-agent-integration-contract-reg

./: README.md  STEP-1.md  STEP-2.md  STEP-3.md  TASK.md  gate_report.json  main.py  pyproject.toml  remediation_plan.json  test_report.json  test_report_fail.json  test_trace.json  test_trace_fail.json  test_trace_pass.json
contracts/: test-agent.json  testcontract.json
snapshots/test-agent/: approved.json
snapshots/testcontract/: approved.json
