[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-create-an-agent-integration-contract-reg"
version = "0.1.0"
description = "Create an Agent Integration Contract Regression Gate"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [

]

[tool.setuptools]
py-modules = ["main"]
